# space-infinity-intern-startup-school

./: .gitignore  README.md  main.py
backend/: .env  .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
backend/api/: app.py  requirements.txt
backend/prisma/: schema.prisma
backend/prisma/migrations/20241102123806_project/: migration.sql
backend/prisma/migrations/20241104100232_update_option/: migration.sql
backend/prisma/migrations/20241104100812_change_column_name/: migration.sql
backend/src/: __init__.py  database.sql  server.py
backend/src/controllers/: account_controller.py  countdown_controller.py  feedback_controller.py  footer_controller.py  history_controller.py  index_controller.py  login_controller.py  message_controller.py  project_controller.py  register_controller.py  seed_controller.py  signup_controller.py  submission_controller.py
backend/src/helpers/: date_utils.py  validation_utils.py
backend/src/middlewares/: auth_middleware.py
backend/src/prisma/: schema.prisma
backend/src/routers/: account_router.py  countdown_router.py  feedback_router.py  footer_router.py  history_router.py  index_router.py  login_router.py  message_router.py  project_router.py  register_router.py  seed_router.py  signup_router.py  submission_router.py
backend/src/services/: account_service.py  feedback_service.py  footer_service.py  history_service.py  login_service.py  message_service.py  project_service.py  register_service.py  seed_service.py  signup_service.py  submission_service.py
frontend/: .gitignore  (+2 more)
(+57 files in other folders)
