[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mtkksk1780", email = "mtkksk1780@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn[standard]>=0.32.0",
    "prisma>=0.15.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
